[package]
name = "hello_crypto"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client"
path = "examples/client.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"

[dev-dependencies]
solana-client = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.42.0"
